Added more remix

--- a/index.html
+++ b/index.html
@@ -20,23 +20,25 @@
           </ul>
         </nav>
     </header>
+
     <section class="info">
       <h1>CPOSC 2019</h1>
       <p class="msg">Eleven years of open source</p>
+
       <div class="DateLoc">
-      <img class="img" src="http://placekitten.com/50/50"
-       alt"image of a kitty">
-      <h3>When</h3>
-      <p class="Location_Date">September 21, 2019</p>
+        <img class="img" src="http://placekitten.com/50/50"
+        alt"image of a kitty">
+        <h3 class="info_header1">When</h3>
+        <p class="Date">September 21, 2019</p>
+        <img class="img" src="http://placekitten.com/50/50"
+        alt" image of a kitty2">
+        <h3 class="info_header">Where</h3>
+        <p class="Location_Date">The Ware Center</p>
+        <p class="Location_Date">Downtown Lancaster, PA</p>
       </div>
-      <div class="DateLoc">
-       <img class="img" src="http://placekitten.com/50/50"
-       alt" image of a kitty">
-       <h3>Where</h3>
-       <p class="Location_Date">The Ware Center</p>
-       <p>Downtown Lancaster, PA</p>
-      </div>
+
     </section>
+
     <section class="AboutCPOSC">
       <p class="p1">The Central Pennsylvania Open Source Conference
       (CPOSC) is a one-day technical conference for open
